--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -25,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "numbers={\"even\": [0,2,4,6,8],   #  First  key-list\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +99,7 @@
        "4     8    9"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +174,7 @@
        "4     8    9"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +208,7 @@
        "(5, 2)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,8 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.to_excel('example.xlsx')"
@@ -255,7 +259,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    2\n",
+       "2    4\n",
+       "3    6\n",
+       "4    8\n",
+       "Name: even, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df [\"even\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +293,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,22 +304,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "0    0\n",
+       "1    2\n",
+       "2    4\n",
+       "3    6\n",
+       "4    8\n",
+       "Name: even, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.even[3]"
+    "df.even"
    ]
   },
   {
@@ -329,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -365,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +429,7 @@
        "0     0    1"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +449,7 @@
        "array([[0, 1]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +540,7 @@
        "4     8"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +600,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +628,7 @@
        "'Juan Valdez'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +655,7 @@
        "'Juan Valdez'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +720,7 @@
        "1  Álvaro Uribe Vélez    65  Senado de la República"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +790,7 @@
        "1  Álvaro Uribe Vélez    65  Senado de la República"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,8 +809,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.to_excel('personajes.xlsx',index=False)"
@@ -787,6 +823,60 @@
    "metadata": {},
    "source": [
     "__Activity__: Adter the previous execution, load the file `personajes.xlsx`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Edad</th>\n",
+       "      <th>Compañia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Juan Valdez</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Café de Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Álvaro Uribe Vélez</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Ex-senador</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Nombre  Edad          Compañia\n",
+       "0         Juan Valdez    32  Café de Colombia\n",
+       "1  Álvaro Uribe Vélez    65        Ex-senador"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dg=pd.read_excel(\"personajes.xlsx\")\n",
+    "\n",
+    "dg.loc[1,'Compañia']=\"Ex-senador\"\n",
+    "dg.to_excel('personajes1.xlsx',index=False)\n",
+    "dg"
    ]
   },
   {
@@ -810,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +939,7 @@
        "1  Senado de la República    65  Álvaro Uribe Vélez"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +998,7 @@
        "1  Álvaro Uribe Vélez    65  Senado de la República"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -952,13 +1042,13 @@
        "      <td>Juan Valdez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Compañia</th>\n",
+       "      <th>Edad</th>\n",
        "      <td>Café de Colombia</td>\n",
        "      <td>32</td>\n",
        "      <td>Juan Valdez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Edad</th>\n",
+       "      <th>Compañia</th>\n",
        "      <td>Café de Colombia</td>\n",
        "      <td>32</td>\n",
        "      <td>Juan Valdez</td>\n",
@@ -970,11 +1060,11 @@
       "text/plain": [
        "                  Compañia  Edad       Nombre\n",
        "Nombre    Café de Colombia    32  Juan Valdez\n",
-       "Compañia  Café de Colombia    32  Juan Valdez\n",
-       "Edad      Café de Colombia    32  Juan Valdez"
+       "Edad      Café de Colombia    32  Juan Valdez\n",
+       "Compañia  Café de Colombia    32  Juan Valdez"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1123,7 @@
        "1  Álvaro Uribe Vélez    65  Senado de la República"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1177,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1228,7 @@
        "0  23.0    Colombia  Juan Valdez"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1256,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1299,7 @@
        "0   23    Colombia  Juan Valdez"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,9 +1319,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:\n",
+      "Santiago Ruiz\n",
+      "Nacionality:\n",
+      "Colombia\n",
+      "Age:\n",
+      "19\n",
+      "Company:\n",
+      "Universidad de Antioquia\n"
+     ]
+    }
+   ],
    "source": [
     "s=pd.Series()\n",
     "for k in ['Name','Nacionality','Age','Company']:\n",
@@ -1249,12 +1354,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name                      Santiago Ruiz\n",
+       "Nacionality                    Colombia\n",
+       "Age                                  19\n",
+       "Company        Universidad de Antioquia\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1265,12 +1385,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Nacionality</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Juan Valdez</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Santiago Ruiz</td>\n",
+       "      <td>Universidad de Antioquia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Age Nacionality           Name                   Company\n",
+       "0  23    Colombia    Juan Valdez                       NaN\n",
+       "1  19    Colombia  Santiago Ruiz  Universidad de Antioquia"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=df.append(s,ignore_index=True)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1281,12 +1446,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Nacionality</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Juan Valdez</td>\n",
+       "      <td>Cafe Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Santiago Ruiz</td>\n",
+       "      <td>Universidad de Antioquia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Nacionality           Name                   Company\n",
+       "0   23    Colombia    Juan Valdez             Cafe Colombia\n",
+       "1   19    Colombia  Santiago Ruiz  Universidad de Antioquia"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=df.fillna(\"Cafe Colombia\")\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1297,18 +1507,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_excel('personasyyo.xlsx',index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "* Load pandas DataFrame from the saved file in Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Nacionality</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Juan Valdez</td>\n",
+       "      <td>Cafe Colombia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Santiago Ruiz</td>\n",
+       "      <td>Universidad de Antioquia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Nacionality           Name                   Company\n",
+       "0   23    Colombia    Juan Valdez             Cafe Colombia\n",
+       "1   19    Colombia  Santiago Ruiz  Universidad de Antioquia"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_excel(\"personasyyo.xlsx\")\n",
+    "df"
    ]
   },
   {
@@ -1460,7 +1726,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "doi=pd.read_json( 'https://api.crossref.org/works/10.1103/PhysRevD.95.095034' )"
@@ -1996,7 +2264,9 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "doi.merge?"
@@ -2608,7 +2878,9 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests \n",
@@ -2769,7 +3041,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -2824,7 +3098,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
