--- a/index.ipynb
+++ b/index.ipynb
@@ -37,13 +37,19 @@
     "key combination `<Shift>+<Enter>` and the rich text written with the [Markdown syntax](https://guides.github.com/features/mastering-markdown/) will be fully displayed again.\n",
     "  * __Activity__: Please double click into this cell to enter the edit mode. Then write something (hopefully using [Markdown syntax](https://guides.github.com/features/mastering-markdown/) syntax) and hit `<Shift>+<Enter>` when done to return back here. \n",
     "* Input code cell, like the one below to the side of the \"`In [ ]:` \" text. There you can write code in `Python`. A new cell with the output is created after the execution. \n",
-    "  * __Activity__: Please write some mathematical operation, like `2+2`, in the next cell and hit `<Shift>+<Enter>`."
+    "\n",
+    "  * __Activity__: Please write some mathematical operation, like `2+2`, in the next cell and hit `<Shift>+<Enter>`.\n",
+    "  \n",
+    "  Agrego formula matematica\n",
+    "$$ ax+by+c=0 $$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
